Resolved merge conflicts in build.sbt